--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "start:dev": "ts-node src/main.ts"
   },
   "dependencies": {
+    "ms": "^2.1.3",
     "puppeteer-core": "^22.12.1"
   },
   "devDependencies": {
     "@swc/core": "^1.5.7",
+    "@types/ms": "^0.7.34",
     "@types/node": "^20.12.12",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
